syntax = "proto3";

package calculator;
option go_package="calculator/calculatorpb";

message Sum {
    int32 num_1 = 1;
    int32 num_2 = 2;
}

message CalculatorRequest {
    Sum request = 1;
}

message CalculatorResponse {
    int32 response = 1;
}

message PrimeNumberRequest {
    int32 number = 1;
}

message PrimeNumberResponse {
    int32 response = 1;
}

message ComputeAverageRequest {
    int32 number = 1;
}

message ComputeAverageResponse {
    double average = 1;
}

message CalculateMaximumRequest {
    int32 number = 1;
}

message CalculateMaximumResponse {
    int32 maximum = 1;
}

message SquareRootRequest {
    int32 number = 1;
}

message SquareRootResponse {
    double number_root = 1;
}

service CalculatorService {
    // Unary request
    rpc Sum(CalculatorRequest) returns (CalculatorResponse) {};

    // Server streaming request
    rpc PrimeNumberDecomposition(PrimeNumberRequest) returns (stream PrimeNumberResponse) {};

    // Client streaming request
    rpc ComputeAverage(stream ComputeAverageRequest) returns (ComputeAverageResponse) {};

    // BiDi streaming request
    rpc CalculateMaximum(stream CalculateMaximumRequest) returns (stream CalculateMaximumResponse) {};

    // error handling
    rpc SquareRoot(SquareRootRequest) returns (SquareRootResponse) {};
}